--- a/frontend/src/styles/shelves.css
+++ b/frontend/src/styles/shelves.css
@@ -2,7 +2,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    min-height: 0;
+    min-height: auto;
     overflow: hidden;
 }
 
@@ -19,8 +19,8 @@
 }
 
 .shelves-page-content {
-    margin-top: 10rem;
-
+    margin-top: 0;
+    padding-top: 10rem;
     z-index: 8;
 
     flex: 1;
