--- a/frontend/src/styles/tokens.css
+++ b/frontend/src/styles/tokens.css
@@ -52,7 +52,7 @@
 body {
     font-family: "Sofia Sans", sans-serif;
 
-    height: 100%;
+    /*height: 100%;*/
     margin: 0;
 
     background: var(--beige-100);
